--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
     "swiper": "^11.2.8",
