--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.81.2",
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
@@ -24,6 +26,7 @@
     "react-loading-indicators": "^1.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
+    "sweetalert2": "^11.22.1",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
   },
